--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,7 +31,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pages
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+      - uses: actions/setup-python@v5
+        name: Set up Python
+        with:
+          python-version: '3.12'
+      - name: Install dependencies
+        run: |
+          uv sync
+      - name: Build site
+        run: make html
+      - name: Set up Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
