--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,13 +33,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Install uv
         uses: astral-sh/setup-uv@v3
-      - uses: actions/setup-python@v5
-        name: Set up Python
         with:
-          python-version: '3.12'
-      - name: Install dependencies
+          version: 0.4.x
+      - name: Install Python and dependencies
         run: |
-          uv sync
+          uv python install
+          uv sync --all
       - name: Build site
         run: make html
       - name: Set up Pages
