--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,12 +37,12 @@ jobs:
           version: 0.4.x
       - name: Install Python and dependencies
         run: |
-          uv venv
           uv python install
-          uv pip install sphinx # need this to get the sphinx-build command
           uv sync --all-extras
       - name: Build site
-        run: make html
+        run: |
+          export SPHINXBUILD=python -m sphinx.cmd.build
+          make html
       - name: Set up Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
