--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install Python and Sphinx from Ubuntu
-        run: apti-get install python3 python3-sphinx  
+        run: apt-get install python3 python3-sphinx  
       - name: Install uv
         uses: astral-sh/setup-uv@v3
         with:
