--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,16 +30,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install Python and Sphinx from Ubuntu
-        run: apt-get install python3 python3-sphinx  
+      - uses: actions/setup-python@v5
+        name: Set up Python
+        with:
+          python-version: '3.12' 
       - name: Install uv
         uses: astral-sh/setup-uv@v3
         with:
           version: 0.4.x
       - name: Add dependencies, build site
         run: |
-          uv sync --all-extras
-          make html
+          uv venv
+          uv pip install -r pyproject.toml
+          uv run sphinx
       - name: Set up Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
