--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -23,13 +23,12 @@ concurrency:
 
 jobs:
   build:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Set up Pages
+        uses: actions/configure-pages@v5
       - uses: actions/setup-python@v5
         name: Set up Python
         with:
@@ -42,15 +41,19 @@ jobs:
         run: |
           uv venv
           uv sync --all-extras
-          uv run python -m sphinx --version
-          uv run python -m sphinx.cmd.build --help
-      - name: Set up Pages
-        uses: actions/configure-pages@v5
+          make html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
           path: 'build/html'
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
