--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "furo>=2024.8.6",
+    "sphinx-copybutton>=0.5.2",
     "sphinx>=8.1.3",
+    "sphinxext-opengraph>=0.9.1",
 ]
